--- a/clase2-LuchoSanchez21/index.html
+++ b/clase2-LuchoSanchez21/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h2>Hola mundo</h2>
-    <script src="index.js"></script>
+    <script src="indexProgFunc.js"></script>
 </body>
 </html>
