--- a/clase2/indexJuan.html
+++ b/clase2/indexJuan.html
@@ -9,6 +9,6 @@
 <body>
     <h2>Sistemas</h2>
     <!-- <script src="indexJuan.js"></script> -->
-    <script src="indexProgFuncJuan.js"></script>
+    <script src="ejercicio.js"></script>
 </body>
 </html>
