--- a/clase2-adrian/index.html
+++ b/clase2-adrian/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h2>Sistema</h2>
-    <script src="indexProgFunc.js"></script>
+    <script src="ejercicio.js"></script>
 </body>
 </html>
