--- a/clase4/index.html
+++ b/clase4/index.html
@@ -12,9 +12,8 @@
     <div id="app">
         <p>{{ factura }}</p>
         <p :style="myStyle">{{ factura.titulo }}</p>
-        <p>Factura</p>
-        <input type="text" v-model="descripcionDelItem" placeholder="Ingrese su item"> 
-        <br>
+        <p>Item &nbsp<input id="elemento" type="text" v-model="descripcionDelItem" 
+            placeholder="Ingrese su item" onfocus="this.value=''"></p>
         <br>
         <button @click="agregarItem">Agregar Item</button> 
         <br>
